# data-analysis-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml  gatorgrader.yml
dataanalysis/: pyproject.toml
dataanalysis/dataanalysis/: main.py  summarize.py  transform.py
dataanalysis/input/: data.txt
dataanalysis/tests/: test_summarize.py  test_transform.py
writing/: reflection.md
